# async-python-sprint-1

./: .gitignore  api_client.py  forecasting.py  pyproject.toml  tasks.py
models/: response.py  result.py
tests/: fixtures.py  response_fixture.json  result_fixture.json  test_api.py  test_forecasting.py
