[tool.poetry]
name = "async-python-sprint-1"
version = "0.1.0"
description = ""
authors = ["Koshelev Dmitrii <me@koshelev.net>"]
readme = "README.md"
packages = [{include = "async_python_sprint_1"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
mypy = "^0.990"
pytest = "^7.2.0"
requests = "^2.28.1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
